name:                lets-tree
version:             0.1.0.0
synopsis:            An introduction to trees and related data structures
description:         Source code and exercises for a course on tree and related functional data structures in Haskell
homepage:            http://github.com/peterson/lets-tree
license:             BSD3
license-file:        LICENSE
author:              David Peterson
maintainer:          dhpeterson@gmail.com
copyright:           Copyright 2015 David Peterson.
category:            Education
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/peterson/lets-tree.git


library
  exposed-modules:     Lets.BinaryHeap,
                       Lets.BinaryTree,
                       Lets.BinomialHeap,
                       Lets.RedBlackTree,
                       Lets.RoseTree
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
